Added specific order by label
Orders statuses alphabetically (as displayed in the Campaign Member Status related list)

--- a/src/classes/HomeChildKanbanCls.cls
+++ b/src/classes/HomeChildKanbanCls.cls
@@ -160,7 +160,8 @@ public with sharing class HomeChildKanbanCls {
                     if (objName == 'CampaignMember' && kabnanField == 'Status') {
                         List<CampaignMemberStatus> cmStatuses = [SELECT Id, Label
                                                                  FROM CampaignMemberStatus
-                                                                 WHERE CampaignId = :ParentRecId];
+                                                                 WHERE CampaignId = :ParentRecId
+                                                                 ORDER BY Label ASC];
                         
                         for (CampaignMemberStatus cmStatus : cmStatuses) {
                             Pickvalslst.add(cmStatus.Label);
